@@ -13,7 +13,7 @@
   <groupId>com.azure</groupId>
   <artifactId>azure-core-test</artifactId>
   <packaging>jar</packaging>
-  <version>1.18.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core-test;current} -->
+  <version>1.19.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core-test;current} -->
 
   <name>Microsoft Azure Java Core Test Library</name>
   <description>This package contains core test types for Azure Java clients.</description>
@@ -40,6 +40,7 @@
       --add-reads com.azure.core.test=ALL-UNNAMED
       --add-opens com.azure.core.test/com.azure.core.test.http=org.junit.platform.commons
       --add-opens com.azure.core.test/com.azure.core.test.models=ALL-UNNAMED
+      --add-opens com.azure.core.test/com.azure.core.test.policy=org.junit.platform.commons
       --add-opens com.azure.core.test/com.azure.core.test.implementation=org.junit.platform.commons
     </javaModulesSurefireArgLine>
 
@@ -59,7 +60,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.40.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core;current} -->
+      <version>1.41.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core;current} -->
     </dependency>
 
     <dependency>
